# actix-boot

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2018-10-09-101948_users/: up.sql
src/: main.rs  schema.rs
src/handlers/: auth.rs  invitation.rs  mod.rs  register.rs  upload.rs
src/models/: blog.rs  invitation.rs  mod.rs
static/root/: index.html
