[package]
name = "actix-web"
version = "0.1.0"
authors = ["Johnson <wyshb520@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.4.0"
actix-multipart = "0.2.0"
actix-identity = "0.2.1"
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-files = "0.2.2"
argonautica = "0.2.0"
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.7"
diesel = { version = "1.4.4", features = ["mysql","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.7.1"
futures = "0.3.5"
r2d2 = "0.8"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sparkpost = "0.5.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
sanitize-filename = "0.2"
